# cas-resolver

./: .gitignore  pyproject.toml
data/input/: sample_batch.csv
src/cas_resolver/: cas.py  cli.py  pubchem.py
tests/: test_cas.py  test_pubchem.py
