[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cas-resolver"
version = "0.1.0"
description = "Resolve chemical names from CSV files to CAS Registry Numbers using PubChem."
requires-python = ">=3.11"
dependencies = [
	"httpx>=0.27,<1.0",
]

[project.optional-dependencies]
dev = [
	"pytest>=8.0,<9.0",
	"ruff>=0.6,<1.0",
]

[project.scripts]
cas-resolver = "cas_resolver.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"
